--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "firebase": "^7.20.0",
+    "react-firebase-hooks": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
