--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
     "firebase": "^7.20.0",
-    "react-firebase-hooks": "^2.2.0"
+    "react-firebase-hooks": "^2.2.0",
+    "react-confirm-alert": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
