--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^0.2.4",
     "firebase": "^7.20.0",
     "react-firebase-hooks": "^2.2.0",
-    "react-confirm-alert": "^2.6.2"
+    "react-confirm-alert": "^2.6.2",
+    "react-bootstrap": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
