--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "fifo_agenda",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://seisen.github.io/my_fifo_agenda/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
     "firebase": "^7.20.0",
-    "react-firebase-hooks": "^2.2.0",
+    "gh-pages": "^3.1.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-confirm-alert": "^2.6.2",
-    "react-bootstrap": "^1.4.0"
+    "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "clean-force": "npm cache clean --force"
   },
   "eslintConfig": {
     "extends": [
